--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                         </p>
                       </div>
                       <div class="download-resume">
-                        <a href="cv/luciano_da_cunha_lopes.pdf" class="btn btn-secondary" target="_blank">Download Currículo</a>
+                        <a src="cv/luciano_da_cunha_lopes.pdf" class="btn btn-secondary" target="_blank">Download Currículo</a>
                       </div>
                     </div>
 
@@ -319,7 +319,7 @@
                     <div class="col-sm-12 col-md-12 col-lg-12">
                       <div class="block">
                         <div class="center download-resume">
-                          <a href="cv/luciano_da_cunha_lopes.pdf" class="btn btn-secondary" target="_blank">Download Currículo</a>
+                          <a src="cv/luciano_da_cunha_lopes.pdf" class="btn btn-secondary" target="_blank">Download Currículo</a>
                         </div>
                       </div>
                     </div>
