--- a/index.html
+++ b/index.html
@@ -128,9 +128,9 @@
                         </div>
                         <p>Olá, tudo bem! Sou iniciante e busco oportunidades na
                           area de desenvolvimento de softwares. Estou engajado em 
-                          aprender e pretendo demonstrar, atravez do meu aprendizado,
-                          projetos inovadores que solucione problemas. Sempre disposto 
-                          a conhecer tecnicas que possa aprimorar ainda mais, meus conhecimentos.
+                          aprender e pretendo demonstrar, através do meu aprendizado,
+                          projetos inovadores que solucionem problemas. Sempre disposto 
+                          a conhecer tecnicas que possam aprimorar ainda mais meus conhecimentos.
                         </p>
                       </div>
                       <div class="download-resume">
@@ -173,7 +173,7 @@
                         <div class="timeline">
                           <!-- Programation 1 -->
                           <div class="timeline-item">
-                            <h4 class="item-title">Programação para Leigos, Algoritimos e Lógica de Progamação, Linux</h4>
+                            <h4 class="item-title">Programação para Leigos, Algoritimos e Lógica de Programação, Linux</h4>
                             <span class="item-period">2021</span>
                             <span class="item-small">Udemy/Geek University</span>
                             <p class="item-description">Cursos de Programação para Leigo, Algoritimos e Lógica de Programação, Linux, que me proporcionaram retornar aos principios basicos de programação.</p>
