--- a/index.html
+++ b/index.html
@@ -264,23 +264,23 @@
                     <div class="col-sm-6 col-md-6 col-lg-6">
                       <div class="block">
                         <div class="block-title">
-                          <h3>Design <span>Skills</span></h3>
+                          <h3>Coding <span>Skills</span></h3>
                         </div>
 
                         <div class="skills-info">
-                          <h4>Web Design</h4>                               
+                          <h4>Python</h4>                               
                           <div class="skill-container">
-                            <div class="skill-percentage skill-3"></div>
+                            <div class="skill-percentage skill-6"></div>
                           </div>
 
-                          <h4>Graphic Design</h4>
-                          <div class="skill-container">
-                            <div class="skill-percentage skill-2"></div>
-                          </div>
-
-                          <h4>Print Design</h4>
+                          <h4>C e C++</h4>
                           <div class="skill-container">
                             <div class="skill-percentage skill-1"></div>
+                          </div>
+
+                          <h4>SQL e noSQL</h4>
+                          <div class="skill-container">
+                            <div class="skill-percentage skill-5"></div>
                           </div> 
                         </div>
 
@@ -299,12 +299,12 @@
                             <div class="skill-percentage skill-5"></div>
                           </div>
 
-                          <h4>Python/Java/C/C++</h4>
+                          <h4>JavaScript</h4>
                           <div class="skill-container">
-                            <div class="skill-percentage skill-7"></div>
+                            <div class="skill-percentage skill-3"></div>
                           </div>
 
-                          <h4>JavaScript</h4>
+                          <h4>Containers</h4>
                           <div class="skill-container">
                             <div class="skill-percentage skill-4"></div>
                           </div> 
