--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <header id="site_header" class="header mobile-menu-hide">
         <div class="header-content">
           <div class="site-title-block mobile-hidden">
-            <a href="#home"><div class="site-title">Luciano <span>da Cunha Lopes</span></div></a>
+            <a href="#home"><div class="site-title"><span>Luciano da Cunha Lopes</span></div></a>
           </div>
 
           <!-- Navigation -->
@@ -49,7 +49,7 @@
                 <a class="pt-trigger" href="#resume">Graduação e Cursos</a>
               </li>
               <li>
-                <a class="pt-trigger" href="#expirience">Experiências Profissionais</a>
+                <a class="pt-trigger" href="#experience">Experiências Profissionais</a>
               </li>
               <li>
                 <a class="pt-trigger" href="#services">Serviços</a>
