--- a/index.html
+++ b/index.html
@@ -581,7 +581,7 @@
                     </div>
                   </div>
 
-                  <!-- Download expirience Button -->
+                  <!-- Download experience Button -->
                   <div class="row">
                     <div class="col-sm-12 col-md-12 col-lg-12">
                       <div class="block">
@@ -591,12 +591,12 @@
                       </div>
                     </div>
                   </div>
-                  <!-- End of Download expirience Button -->
+                  <!-- End of Download experience Button -->
 
                 </div>
               </div>
             </section>
-            <!-- End of expirience Subpage -->
+            <!-- End of experience Subpage -->
 
 
 
