corrigindo cv e html

--- a/index.html
+++ b/index.html
@@ -129,12 +129,12 @@
                         <div class="block-title">
                           <h3>Quem <span>Sou?</span></h3>
                         </div>
-                        <p>Olá, tudo bem! Curso Ciências de Dados na UNIVESP - Universidade Virtual do 
-                          Estado de São Paulo, esotu em busca de oportunidades nas áreas de desenvolvimento de softwares, 
-                          Analise de Dados e correlatas. Me sinto engajado em aprender e disposto a demonstrar, 
-                          através de meus aprendizados, projetos simples e inovadores que visam solucionar
-                          problemas do codidiano real. Estou disposto a conhecer, aprender e desenvolver técnicas 
-                          que possam aprimorarem ainda mais os meus conhecimentos.
+                        <p>Olá, tudo bem! Estou cursando atualmente Ciências de Dados na UNIVESP - Universidade Virtual do 
+                          Estado de São Paulo, estou em busca de oportunidades na área de Tecnologia da Informação, principalmente
+                          voltadas à desenvolvimento de softwares, analise de Dados, data science, nuvem e etc. Engajado em aprender 
+                          e disposto a demonstrar, através de meus aprendizados, projetos simples mais inovadores visando solucionar
+                          problemas reais do codidiano. Estou disposto a conhecer, aprender e desenvolver técnicas 
+                          que possam aprimorar ainda mais os meus conhecimentos.
                         </p>
                       </div>
                       <div class="download-resume">
