--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                           Estado de São Paulo, estou em busca de oportunidades na área de Tecnologia da Informação, principalmente
                           voltadas à desenvolvimento de softwares, analise de Dados, data science, nuvem e etc. Engajado em aprender 
                           e disposto a demonstrar, através de meus aprendizados, projetos simples mas inovadores visando solucionar
-                          problemas reais do codidiano. Estou disposto a conhecer, aprender e desenvolver técnicas 
+                          problemas reais do cotidiano. Estou disposto a conhecer, aprender e desenvolver técnicas 
                           que possam aprimorar ainda mais os meus conhecimentos.
                         </p>
                       </div>
