--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                   <div class="row">
                     <div class="col-sm-4 col-md-4 col-lg-4">
                       <div class="photo">
-                        <img src="images/luciano.png" alt="imagem-LucianocLopes">
+                        <img src="images/luciano_2.jpeg" alt="imagem-LucianocLopes">
                       </div>
                     </div>
 
