--- a/index.html
+++ b/index.html
@@ -100,15 +100,15 @@
               <div class="section-inner start-page-content">
                 <div class="page-header">
                   <div class="row">
-                    <div class="col-sm-4 col-md-4 col-lg-4">
+                    <div class="col-md-4">
                       <div class="photo">
                         <img src="images/luciano_2.jpeg" alt="imagem-LucianocLopes">
                       </div>
                     </div>
 
-                    <div class="col-sm-8 col-md-8 col-lg-8">
+                    <div class="col-md-8">
                       <div class="title-block">
-                        <h1>Luciano C. Lopes</h1>
+                        <h1>Luciano da Cunha Lopes</h1>
                         <div class="owl-carousel text-rotation">                                    
                           <div class="item">
                             <div class="sp-subtitle">Desenvolvedor Backend</div>
@@ -135,7 +135,7 @@
                 <div class="page-content">
                   <div class="row">
 
-                    <div class="col-sm-6 col-md-6 col-lg-6">
+                    <div class="col-md-8">
                       <div class="about-me">
                         <div class="block-title">
                           <h3>Quem <span>Sou?</span></h3>
@@ -153,7 +153,7 @@
                       </div>
                     </div>
 
-                    <div class="col-sm-6 col-md-6 col-lg-6">
+                    <div class="col-md-4">
                       <ul class="info-list">
                         <li><span class="title">Idade</span><span class="value">43</span></li>
                         <li><span class="title">Nacionalidade</span><span class="value">Brasileiro</span></li>
@@ -315,7 +315,7 @@
                     <div class="block-title text-center">
                       <h3>Hard & Coding <span>Skills</span></h3>
                     </div>
-                    <div class="col-sm-6 col-md-6 col-lg-6">
+                    <div class="col-md-6">
                       <div class="block">
                         <div class="skills-info">
 
@@ -337,7 +337,7 @@
                       </div>
                     </div>
 
-                    <div class="col-sm-6 col-md-6 col-lg-6">
+                    <div class="col-md-6">
                       <div class="block">
                         <div class="skills-info">
                           <h4>HTML5/CSS3</h4>                               
@@ -362,7 +362,7 @@
 
                   <!-- Download Resume Button -->
                   <div class="row">
-                    <div class="col-sm-12 col-md-12 col-lg-12">
+                    <div class="col-md-12">
                       <div class="block">
                         <div class="center download-resume">
                           <a target="_blank" href="cv/luciano_da_cunha_lopes.pdf" class="btn btn-secondary" download="luciano_da_cunha_lopes.pdf">Baixar meu Currículo</a>
@@ -389,7 +389,7 @@
 
                   <div class="row">
 
-                    <div class="col-sm-10">
+                    <div class="col-md-10">
                       <div class="block">
                         <div class="block-title">
                           <h3>Experiências Profissionais</h3>
@@ -458,7 +458,7 @@
                     </div>
 
                   <div class="row">
-                    <div class="col-sm-6 col-md-6 col-lg-6">
+                    <div class="col-md-6">
                       <div class="block">
                         <div class="block-title">
                           <h3>Hard <span>Skills</span></h3>
@@ -500,7 +500,7 @@
                       </div>
                     </div>
 
-                    <div class="col-sm-6 col-md-6 col-lg-6">
+                    <div class="col-md-6">
                       <div class="block">
                         <div class="block-title">
                           <h3>Soft <span>Skills</span></h3>
@@ -539,7 +539,7 @@
 
                   <!-- Download experience Button -->
                   <div class="row">
-                    <div class="col-sm-12 col-md-12 col-lg-12">
+                    <div class="col-md-12">
                       <div class="block">
                         <div class="center download-resume">
                           <a target="_blank" href="cv/luciano_da_cunha_lopes.pdf" class="btn btn-secondary" download="luciano_da_cunha_lopes.pdf">Baixar meu Currículo</a>
@@ -565,13 +565,13 @@
                 <div class="page-content">
                   <!-- My Services -->
                   <div class="row">
-                    <div class="col-sm-12 col-md-12">
+                    <div class="col-md-12">
                       <div class="block-title">
                         <h3>Sou <span>bom em...</span></h3>
                       </div>
                     </div>
 
-                    <div class="col-sm-6">
+                    <div class="col-md-6">
                       <div class="service-block"> 
                         <div class="service-info">
                           <div class="service-image">
@@ -587,7 +587,7 @@
                       </div>
                     </div>
 
-                    <div class="col-sm-6">
+                    <div class="col-md-6">
                       <div class="service-block"> 
                         <div class="service-info">
                           <div class="service-image">
